# ChangeLog for sci-chemistry/avogadro
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/avogadro/ChangeLog,v 1.36 2011/04/26 16:26:52 jlec Exp $

*avogadro-1.0.3 (26 Apr 2011)

  26 Apr 2011; Justin Lecher <jlec@gentoo.org> -avogadro-0.9.8.ebuild,
  -avogadro-0.9.9.ebuild, -avogadro-1.0.2_rc1.ebuild, +avogadro-1.0.3.ebuild:
  Version Bump, cleaned old

*avogadro-1.0.2_rc1 (26 Mar 2011)

  26 Mar 2011; Justin Lecher <jlec@gentoo.org> +avogadro-1.0.2_rc1.ebuild:
  Version Bump

  26 Mar 2011; Justin Lecher <jlec@gentoo.org> avogadro-1.0.1.ebuild,
  +files/avogadro-1.0.1-sip-backport.patch:
  Backported sip patch from 1.0.2_rc1, #335644

*avogadro-1.0.1 (21 May 2010)

  21 May 2010; Justin Lecher <jlec@gentoo.org> +files/1.0.1-gl2ps.patch,
  avogadro-0.9.8.ebuild, avogadro-0.9.9.ebuild, avogadro-1.0.0.ebuild,
  +avogadro-1.0.1.ebuild:
  Version Bump, unbundle gl2ps, fix for PYTHON ABI #316169

  25 Feb 2010; Fabio Erculiani <lxnay@gentoo.org> avogadro-1.0.0.ebuild,
  +files/avogadro-1.0.0-sip-4.10.patch:
  fix compilation with sip 4.10, thanks to Victor Yu. Kowalsky and
  Kacper Kowalik for reporting, close bug #303703

*avogadro-1.0.0 (23 Oct 2009)

  23 Oct 2009; Marcus D. Hanwell <cryos@gentoo.org> +avogadro-1.0.0.ebuild:
  Version bump - first stable release of Avogadro.

*avogadro-0.9.9 (20 Oct 2009)

  20 Oct 2009; Marcus D. Hanwell <cryos@gentoo.org> -avogadro-0.9.7.ebuild,
  +avogadro-0.9.9.ebuild:
  Version bump, removed old version.

  10 Sep 2009; Marcus D. Hanwell <cryos@gentoo.org> -avogadro-0.9.6.ebuild:
  Removed old version.

*avogadro-0.9.8 (10 Sep 2009)

  10 Sep 2009; Marcus D. Hanwell <cryos@gentoo.org> +avogadro-0.9.8.ebuild:
  Version bump.

  02 Aug 2009; Marcus D. Hanwell <cryos@gentoo.org> avogadro-0.9.7.ebuild,
  +files/avogadro-0.9.7-shader-include.patch:
  Small patch to remove the unnecessary config.h include in the shader
  plugin, bug 277251.
