@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/avogadro/Attic/avogadro-1.0.0.ebuild,v 1.3 2010/05/21 15:33:28 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/avogadro/Attic/avogadro-1.0.0.ebuild,v 1.4 2011/04/27 07:26:04 jlec Exp $
 
 EAPI=2
 
@@ -15,9 +15,10 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="+glsl python"
+IUSE="+glsl python sse2"
 
-RDEPEND=">=sci-chemistry/openbabel-2.2.2
+RDEPEND="
+	>=sci-chemistry/openbabel-2.2.2
 	>=x11-libs/qt-gui-4.5.2:4
 	>=x11-libs/qt-opengl-4.5.2:4
 	glsl? ( >=media-libs/glew-1.5.0	)
@@ -46,6 +47,7 @@ src_configure() {
 		-DENABLE_RPATH=OFF
 		-DENABLE_UPDATE_CHECKER=OFF
 		$(cmake-utils_use_enable glsl GLSL)
+		$(cmake-utils_use_with sse2 SSE2)
 		$(cmake-utils_use_enable python PYTHON)"
 
 	cmake-utils_src_configure
