@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/avogadro/Attic/avogadro-1.0.1.ebuild,v 1.2 2011/03/26 16:57:08 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/avogadro/Attic/avogadro-1.0.1.ebuild,v 1.3 2011/04/27 07:26:04 jlec Exp $
 
 EAPI=2
 
@@ -15,9 +15,10 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="+glsl python"
+IUSE="+glsl python sse2"
 
-RDEPEND=">=sci-chemistry/openbabel-2.2.3
+RDEPEND="
+	>=sci-chemistry/openbabel-2.2.3
 	>=x11-libs/qt-gui-4.5.3:4
 	>=x11-libs/qt-opengl-4.5.3:4
 	x11-libs/gl2ps
@@ -29,7 +30,7 @@ RDEPEND=">=sci-chemistry/openbabel-2.2.3
 		dev-python/sip
 	)"
 DEPEND="${RDEPEND}
-	>=dev-cpp/eigen-2.0.9
+	dev-cpp/eigen:2
 	>=dev-util/cmake-2.6.2"
 
 pkg_setup() {
@@ -49,6 +50,7 @@ src_configure() {
 		-DENABLE_RPATH=OFF
 		-DENABLE_UPDATE_CHECKER=OFF
 		$(cmake-utils_use_enable glsl GLSL)
+		$(cmake-utils_use_with sse2 SSE2)
 		$(cmake-utils_use_enable python PYTHON)"
 
 	cmake-utils_src_configure
